# Problems

./: .gitignore  CLAUDE.md  README.md  cheatsheets.md  dp_summary.md  lld.md  sysdesign.md  sysdesign_questions.md  templates.py  templates_cpp.md  templates_py.md
algomonster/: autocomplete.py  binary_search.cpp  binary_search.py  binary_tree_min_depth.cpp  binary_tree_min_depth.py  binary_tree_right_side_view.cpp  binary_tree_right_side_view.py  build_tree.py  combination_sum.py  construct_binary_tree.py  container_with_most_water.cpp  container_with_most_water.py  daily_temperatures.py  find_all_anagrams.cpp  find_all_anagrams.py  find_anagrams.cpp  find_anagrams.py  find_boundary.cpp  find_boundary.py  find_firest_occurence.py  find_first_occurence.py  find_first_occurrence.cpp  find_first_occurrence.py  find_k_closest.cpp  find_k_closest.py  find_k_closest_points.py  find_k_largest.cpp  find_k_largest.py  find_k_smallest_matrix.cpp  find_k_smallest_matrix.py  find_min.cpp  find_min.py  find_min_rotate.cpp  find_min_rotated.py  find_not_smaller.cpp  first_not_smaller.py  flood_fill.py  has_cycle.py  hascycle.py  insert_bst.cpp  (+99 more)
archive/: templates.py
blp/: inflected_search.py  most_traded_stock.py  word_expansion.py
checkio/: weak_point.py
codewars/: abbreviate.py  alphabet_position.py  digital_root.py  isValidWalk.py  link_list_insertsort.py  link_list_len_getnth.py  link_list_len_insertnth.py  link_list_push.py  link_list_sortedinsert.py  multiples.py  nth_fib.py  run_length_encoding.py  sum_digits.py  sum_many_ints.py  title_case.py  to_underscore.py
codility/: anagram2palindrome.cc  bin_search.py  brackets.cc  brackets.txt  counting.py  distinct.c  dominator.py  equi.txt  frog_jump.py  k_complement.cc  max_counters.py  max_prod3.cc  max_prod3.txt  (+12 more)
interviews/: 2do.txt  CMakeLists.txt  copy_swap.cpp  copy_swap.h  event_manager.h  event_manager.py  external_sort.cpp  orderbook.cpp  orderbook.drawio  orderbook.h  questions.md  queue.cpp  queue.h  queue.py  queue2.cpp  queue2.h  rule_of_five.cpp  rule_of_five.h  rule_of_three.cpp  rule_of_three.h  rule_of_zero.h  shared_ptr.cpp  shared_ptr.h  sorted_vector.h  unique_ptr.cpp  unique_ptr.h  vector.cpp  vector.h  vector2.cpp  vector2.h
interviews/tests/: CMakeLists.txt  vector.t.cpp
(+584 files in other folders)
