cmake_minimum_required(VERSION 3.10)
project(InterviewProject)

add_executable(vector vector.cpp)
add_executable(queue queue.cpp)
add_executable(shared_ptr shared_ptr.cpp)
add_executable(unique_ptr unique_ptr.cpp)
add_executable(rule_of_three rule_of_three.cpp)
add_executable(rule_of_five rule_of_five.cpp)
add_executable(rule_of_zero rule_of_zero.cpp)
add_executable(copy_swap copy_swap.cpp)
set_property(TARGET vector PROPERTY CXX_STANDARD 17)
